--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <title>React Transform Boilerplate</title>
+    <title>Silas</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
     <div id="root"></div>
+    <footer>
+      <h4 id="release">
+        <strong>Silas</strong> unstable 0.2.0</h4>
+    </footer>
     <script src="/static/bundle.js"></script>
   </body>
 </html>
