Added the cog, still not solved my react issues :anger:

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
+    <span id="cog" class="glyphicon glyphicon-cog" aria-hidden="true"></span>
     <div id="root"></div>
     <footer>
       <h4 id="release">
