Started ajax requests.. damn you CORS :anger:

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <div id="root"></div>
     <footer>
       <h4 id="release">
-        <strong>Silas</strong> unstable 0.2.0</h4>
+        <strong>Silas</strong> unstable 0.2.0
+      </h4>
     </footer>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="/static/bundle.js"></script>
   </body>
 </html>
