--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
   <body>
     <span id="cog" class="glyphicon glyphicon-cog" aria-hidden="true"></span>
     <div id="root"></div>
-    <footer>
-      <h4 id="release">
-        <strong>Silas</strong> unstable 0.2.0
-      </h4>
-    </footer>
+    <footer id="footer"></footer>
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="/static/bundle.js"></script>
   </body>
