Added landing page

--- a/landing.html
+++ b/landing.html
@@ -6,9 +6,6 @@
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
-    <span id="cog" class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-    <div id="root"></div>
-    <footer id="footer"></footer>
-    <script src="/static/bundle.js"></script>
+    <h1 class="text-center" style="color: rgb(217, 34, 210); font-size: 5em;">Silas</h1>
   </body>
 </html>
